...
            <Animated.View
              style={{
                ...styles.button,
                opacity: buttonOpacity,
                transform: [{ translateY: buttonY }],
              }}
              testID={"sign-button"}
            >
              <Text style={{ fontSize: 20, fontWeight: "bold", color: "#fff" }}>
                SIGN IN
              </Text>
            </Animated.View>
          </TapGestureHandler>
...
          transform: [{ translateY: bgY }],
        }}
      >
        <TouchableOpacity
          style={{ ...styles.button, backgroundColor: "#2E71DC" }}
          onPress={() => props.navigation.navigate("Login")}
          testID={"proceed-button"}
        >
          <Text style={{ fontSize: 20, fontWeight: "bold", color: "white" }}>
            Proceed To Login
          </Text>
        </TouchableOpacity>
      </Animated.View>
...
